--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-row-wrapper {
   display: flex;
@@ -116,7 +116,7 @@
   width: 226px;
 }
 .task-item >    .input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 .delete-btn-img {
   height: 2em;
@@ -129,18 +129,18 @@
 
 /* Completed */
 #completed-tasks .label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .tasks-list .task-item .input[type=text] {
-  display: none
+  display: none;
 }
 
 .tasks-list .task-item.edit-task .input[type=text] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .tasks-list .task-item.edit-task .label {
